app/assets/stylesheets/local/tables.scss
table .right {
  text-align: right;
}

tr.align-bottom,
.align-bottom tr {
  th, td {
    vertical-align: bottom;
  }
}

tr.align-top,
.align-top tr {
  th, td {
    vertical-align: top;
  }
}

td.no-wrap {
  white-space: nowrap;
}

table.tight {
  th, td {
    padding-right: 10px;
  }
}

table.income {
  tbody {
    th {
      font-weight: normal;
    }
    td {
      white-space: nowrap;
    }
  }

  tfoot {
    th, td {
      @include core-24;
      font-weight: bold;
      white-space: nowrap;
    }
  }
}

.guide-table {
  tr {
    vertical-align: top;
  }
  th {
    p {
      font-weight: bold;
    }
  }
}

table.search-results {
  th {
    position: relative;
    padding-right: 10px;
  }

  th a:visited {
    color: #005ea5;
  }
  th a {
    text-decoration: none;
  }

  th.sort_arrows a:after {
    content: " \25b2";
    right: 10px;
    top: 13px;
    font-size: 0.5em;
    position: absolute;
  }

  th.sort_arrows a:before {
    content: " \25bc";
    right: 10px;
    top: 21px;
    font-size: 0.5em;
    position: absolute;
  }

  th.sort_arrow_asc a:before {
    content: " \25bc";
    right: 10px;
    top: 16px;
    font-size: 0.7em;
    position: absolute;
  }

  th.sort_arrow_desc a:before {
    content: " \25b2";
    right: 10px;
    top: 16px;
    font-size: 0.7em;
    position: absolute;
  }
}

